・Utilがcommit出来ていなかったので再コミット ・ToDo新規発行時のID発行を別メソッドへ

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="todo_content_title">内容</string>
     <string name="progress_title">進捗率</string>
     <string name="pj_title">プロジェクト名</string>
+    <string name="pjMainte_title">プロジェクト管理</string>
 
 </resources>
