--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,9 @@
     <string name="progress_title">進捗率</string>
     <string name="pj_title">プロジェクト名</string>
     <string name="pjMainte_title">プロジェクト管理</string>
+    <string name="insert_ok_msg">作成しました！。</string>
+    <string name="insert_ng_msg">作成に失敗しました。</string>
+    <string name="ok_title">正常終了</string>
+    <string name="ng_title">失敗しました。</string>
 
 </resources>
